--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
  >
-
+    <tw.org.iii.mysensortest.MyView
+        android:id="@+id/myView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+<!--
     <TextView
         android:id="@+id/vX"
         android:layout_width="wrap_content"
@@ -23,4 +27,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="43sp"/>
+        -->
 </LinearLayout>
